modulos funcionando. Falta comprobar ROIEditor